apply plugin: 'java-library'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
    api project(":protocol")
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allJava
}

task javadocJar(type: Jar) {
    archiveClassifier = 'javadoc'
    from javadoc.destinationDir
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            artifactId = 'hamal-context'

            artifact sourcesJar
            artifact javadocJar

            pom {
                description = project.name
            }
        }
    }
}